fix misalignment on wishlist page, conditional for pluralising / singular / no results in search results

--- a/app/assets/stylesheets/components/_card_product.scss
+++ b/app/assets/stylesheets/components/_card_product.scss
@@ -18,6 +18,7 @@
       padding-top: 20px;
       margin-inline: 20px;
       text-align: center;
+      text-decoration: none;
       h3{
         font-weight: bolder;
         color: $mauve;
